tests/ui/timer_option_name.stderr
error[E0597]: `name` does not live long enough
  --> tests/ui/timer_option_name.rs:19:22
   |
17 |     let name = CString::new("name").unwrap();
   |         ---- binding `name` declared here
18 |     let mut opts = TimerOptions::default();
19 |     opts.name = Some(&name);
   |                      ^^^^^ borrowed value does not live long enough
...
22 | }
   | -
   | |
   | `name` dropped here while still borrowed
   | borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `TimerContext`
   |
   = note: values in a scope are dropped in the opposite order they are defined
